--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-highlight-menu": "^2.0.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.16.0",
     "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
