--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-highlight-menu": "^2.0.2",
     "react-icons": "^5.3.0",
+    "react-quiz-component": "^0.9.1",
     "react-router-dom": "^6.16.0",
     "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
