--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-data-table-component": "^7.6.2",
+    "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-highlight-menu": "^2.0.2",
     "react-icons": "^5.3.0",
