--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -29,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-quiz-component": "^0.9.1",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5",
     "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
