--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
     "react-wrap-balancer": "^1.1.0",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
