--- a/server/applications.json
+++ b/server/applications.json
@@ -10,5 +10,41 @@
     "name": "SIddhant",
     "email": "siddhantchakraborty977@gmail.com",
     "phone": "123"
+  },
+  {
+    "jobId": 5,
+    "name": "SIddhant",
+    "email": "siddhantchakraborty977@gmail.com",
+    "phone": "123"
+  },
+  {
+    "jobId": 1,
+    "name": "SIddhant",
+    "email": "siddhantchakraborty977@gmail.com",
+    "phone": "123"
+  },
+  {
+    "jobId": "3410",
+    "name": "SIddhant",
+    "email": "siddhantchakraborty977@gmail.com",
+    "phone": "123"
+  },
+  {
+    "jobId": "3566",
+    "name": "SIddhant",
+    "email": "siddhantchakraborty977@gmail.com",
+    "phone": "123"
+  },
+  {
+    "jobId": "3410",
+    "name": "SIddhant",
+    "email": "siddhantchakraborty977@gmail.com",
+    "phone": "123"
+  },
+  {
+    "jobId": "3566",
+    "name": "SIddhant",
+    "email": "siddhantchakraborty977@gmail.com",
+    "phone": "123"
   }
 ]
