--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.3.0",
+    "express": "^4.21.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-data-table-component": "^7.6.2",
