--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.0",
+    "lucide-react": "^0.446.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-data-table-component": "^7.6.2",
     "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-highlight-menu": "^2.0.2",
+    "react-horizontal-scrolling-menu": "^7.1.8",
     "react-icons": "^5.3.0",
     "react-quiz-component": "^0.9.1",
     "react-router-dom": "^6.16.0",
