--- a/server/applications.json
+++ b/server/applications.json
@@ -46,5 +46,11 @@
     "name": "SIddhant",
     "email": "siddhantchakraborty977@gmail.com",
     "phone": "123"
+  },
+  {
+    "jobId": 1,
+    "name": "sidd",
+    "email": "siddhant977@gmail.com",
+    "phone": "7987798"
   }
 ]
